# voucher-qr-generator

./: .gitignore  LICENSE  README.md  config.ini.example  generate_pdf.py  gui.py  main.py  pyproject.toml
